--- a/src/style/stylesheet.css
+++ b/src/style/stylesheet.css
@@ -5,6 +5,8 @@ body {
   background-color: black;
   cursor: default;
   color: white;
+  overflow-x: hidden;
+  scroll-behavior: smooth;
 }
 
 #root {
@@ -23,6 +25,7 @@ body {
   margin-left: 25vw;
   margin-top: 15vw;
   width: 50vw;
+  position: absolute;
 }
 
 .introText {
@@ -30,7 +33,7 @@ body {
   font-size: 10vw;
   margin: 0;
   line-height: 100%;
-  transition: 0.5s;
+  transition: 1s;
   font-weight: bold;
   cursor: pointer;
 }
@@ -55,12 +58,39 @@ body {
   text-shadow: 0.35vw 0.35vw 0.75vw #f7ff00;
 }
 
+.highlightDesign {
+  opacity: 1;
+  transition: 1s;
+  padding-left: 1vw;
+  color: white;
+  letter-spacing: 0.25vw;
+  text-shadow: 0.35vw 0.35vw 0.75vw #09f7ff;
+}
+
+.highlightGraphics {
+  opacity: 1;
+  transition: 1s;
+  padding-left: 1vw;
+  color: white;
+  letter-spacing: 0.25vw;
+  text-shadow: 0.35vw 0.35vw 0.75vw #f709ff;
+}
+
+.highlightArt {
+  opacity: 1;
+  transition: 1s;
+  padding-left: 1vw;
+  color: white;
+  letter-spacing: 0.25vw;
+  text-shadow: 0.35vw 0.35vw 0.75vw #f7ff00;
+}
+
 #navBar {
   position: absolute;
   margin-left: 25vw;
   top: 2.5vw;
   color: white;
-  width: 100%;
+  width: 50vw;
   font-size: 1vw;
 }
 
@@ -79,18 +109,17 @@ li {
   width: 10vw;
   padding: 1vw;
   transition: 0.5s;
-  box-sizing: border-box;
 }
 
 #navBar ul > li:hover {
   transition: 0.5s;
   text-shadow: 0.15vw 0.15vw 0.15vw #f709ff;
-  letter-spacing: 0.05vw;
 }
 
 .hidden {
   opacity: 0;
   visibility: hidden;
+  display: none;
   transition: 0.5s;
 }
 
@@ -98,6 +127,153 @@ li {
   opacity: 1;
   visibility: visible;
   transition: 0.5s;
+}
+
+#servicesContainer {
+  position: absolute;
+  margin-left: 15vw;
+  margin-top: 15vw;
+  width: 70vw;
+}
+
+.pageName {
+  color: white;
+  position: absolute;
+  margin-top: -0.5vw;
+  margin-left: 2.5vw;
+  font-size: 1.25vw;
+}
+
+.pageNamePink {
+  text-shadow: 0.25vw 0.25vw 0.1vw #f709ff;
+}
+
+.pageNameYellow {
+  text-shadow: 0.25vw 0.25vw 0.1vw #f7ff00;
+}
+
+.mainHeader {
+  font-size: 4vw;
+  margin-top: -2vw;
+  margin-left: 25vw;
+  width: 50vw;
+  display: inline-block;
+  letter-spacing: 0.4vw;
+}
+
+.colorCollumn {
+  position: absolute;
+  margin-top: -1vw;
+  margin-left: 22.5vw;
+  height: 9.5vw;
+  width: 0.5vw;
+}
+
+.pinkCollumn {
+  background-color: #f709ff;
+  box-shadow: 0.25vw 0.25vw 0.5vw #f709ff;
+}
+
+#servicesLeftDiv {
+  margin-top: -2vw;
+  margin-left: 25vw;
+  width: 20vw;
+  font-size: 1.5vw;
+  position: absolute;
+}
+
+#servicesRightDiv {
+  margin-top: -2vw;
+  margin-left: 55vw;
+  width: 20vw;
+  font-size: 1.5vw;
+  opacity: 0.75;
+  position: absolute;
+}
+
+#aboutUsContainer {
+  position: absolute;
+  margin-left: 15vw;
+  margin-top: 15vw;
+  width: 70vw;
+  box-sizing: border-box;
+}
+
+.yellowCollumn {
+  background-color: #f7ff00;
+  box-shadow: 0.25vw 0.25vw 0.5vw #f7ff00;
+}
+
+#PK {
+  width: 20vw;
+  position: fixed;
+  left: 7.5vw;
+  bottom: -10vw;
+}
+
+.aboutUs {
+  font-size: 1.25vw;
+  margin-left: 25vw;
+  margin-bottom: 5vw;
+  opacity: 0.75;
+  width: 37.5vw;
+  text-indent: 2vw;
+}
+
+#aboutUs2 {
+  margin-left: 32.5vw;
+}
+
+.fade-in-section {
+  opacity: 0;
+  transform: translateY(20vh);
+  visibility: hidden;
+  transition: opacity 1.2s ease-out, transform 1s ease-out;
+  will-change: opacity, visibility;
+}
+
+.fade-in-section.is-visible {
+  opacity: 1;
+  transform: none;
+  visibility: visible;
+}
+
+#skills {
+  width: 35vw;
+  margin-left: 40vw;
+}
+
+#languages {
+  width: 50vw;
+  margin-left: 25vw;
+  margin-top: 3vw;
+}
+
+#education {
+  font-size: 3vw;
+  text-shadow: 0.25vw 0.25vw 0.5vw #f7ff00;
+  margin-top: 7.5vw;
+  margin-left: 50vw;
+  font-weight: bold;
+}
+
+#educationDetails {
+  margin-left: 30vw;
+  font-size: 1.25vw;
+  padding-bottom: 10vw;
+}
+
+#educationDetails pre {
+  font-family: "Poppins", sans-serif;
+  font-weight: 100;
+  font-size: 1.2vw;
+  margin-top: 0;
+}
+
+#educationDetails span {
+  padding: 0;
+  font-weight: bold;
+  display: block;
 }
 
 /*# sourceMappingURL=stylesheet.css.map */
