--- a/src/style/stylesheet.css
+++ b/src/style/stylesheet.css
@@ -12,6 +12,7 @@ body {
 #root {
   top: 0;
   position: absolute;
+  width: 100%;
 }
 
 #logo {
@@ -127,6 +128,7 @@ li {
   opacity: 1;
   visibility: visible;
   transition: 0.5s;
+  display: inline-block;
 }
 
 #servicesContainer {
@@ -274,6 +276,64 @@ li {
   padding: 0;
   font-weight: bold;
   display: block;
+}
+
+#projectsContainer {
+  margin-top: 35vh;
+  width: 100%;
+  text-align: left;
+}
+
+.portfolioContainer {
+  position: relative;
+  display: inline-block;
+  top: 0;
+  width: 100%;
+  min-height: 100vh;
+  transition: 0.5s;
+  border-bottom: solid 0.1vw white;
+}
+
+.para {
+  margin: 0;
+  line-height: 0.85em;
+  display: block;
+  position: sticky;
+  text-align: center;
+  top: 30vh;
+  font-size: 20vw;
+  opacity: 0.25;
+  z-index: -1;
+}
+
+.portfolioIMG {
+  height: 0vw;
+  transition: 0.5s;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  cursor: pointer;
+}
+
+.portfolioItem {
+  display: inline-block;
+  font-size: 2vw;
+  margin: 0 0 0 5vw;
+  line-height: 0.9EM;
+  transition: 0.5s;
+  cursor: pointer;
+}
+
+.designItem:hover {
+  text-shadow: 0.2vw 0.2vw 0.25vw #09f7ff;
+}
+
+.graphicsItem:hover {
+  text-shadow: 0.2vw 0.2vw 0.25vw #f709ff;
+}
+
+.artItem:hover {
+  text-shadow: 0.2vw 0.2vw 0.25vw #f7ff00;
 }
 
 /*# sourceMappingURL=stylesheet.css.map */
