--- a/src/style/stylesheet.scss
+++ b/src/style/stylesheet.scss
@@ -312,7 +312,7 @@ li {
 }
 
 .portfolioIMG {
-    height: 0vw;
+    width: 0;
     transition: 0.5s;
     display: block;
     margin-left: auto;
@@ -339,4 +339,73 @@ li {
 
 .artItem:hover {
     text-shadow: 0.2vw 0.2vw 0.25vw $yellow;
+}
+
+#contactButton {
+    transition: 0.5s;
+    position: fixed;
+    margin: 0;
+    font-size: 1vw;
+    padding: 1vw;
+    right: 5vw;
+    top: 2.5vw;
+    display: inline-block;
+    cursor: pointer;
+    z-index: 100;
+}
+
+#contactButton:hover {
+    transition: 0.5s;
+    text-shadow: 0.15vw 0.15vw 0.15vw $blue;
+}
+
+#contactContainer {
+    position: fixed;
+    display: inline-block;
+    margin-top: 17.5vh;
+    margin-left: (33%)/2;
+    width: 66%;
+    background-color: white;
+    height: 70vh;
+    box-shadow: 1vw 1vw 0.5vw $blue;
+    z-index: 100;
+}
+
+#close {
+    color: black;
+    float: right;
+    font-size: 3vw;
+    margin-right: 1vw;
+    margin-top: 0.5vw;
+    cursor: pointer;
+}
+
+#contactUs {
+    color: black;
+    font-size: 2vw;
+    letter-spacing: 0.25vw;
+    text-align: center;
+    margin-top: 15vh;
+}
+
+#email {
+    color: black;
+    font-size: 4.5vw;
+    text-align: center;
+    margin: 0;
+    font-weight: bold;
+    margin-top: 10vh;
+}
+
+#social {
+    text-align: center;
+    color: black;
+    font-size: 1.5vw;
+    margin-top: 7.5vh;
+}
+
+#social img {
+    width: 5vh;
+    margin: 1vw;
+    cursor: pointer;
 }
