--- a/src/style/stylesheet.scss
+++ b/src/style/stylesheet.scss
@@ -20,15 +20,17 @@ body {
 }
 
 #logo {
-    position: absolute;
+    position: fixed;
     width: 10vw;
     left: 5vw;
     top: 2.5vw;
+    cursor: pointer;
+    z-index: 150;
 }
 
 #introContainer {
     margin-left: 25vw;
-    margin-top: 15vw;
+    margin-top: 7.5vw;
     width: 50vw;
     position: absolute;
 }
@@ -39,7 +41,7 @@ body {
     margin: 0;
     line-height: 100%;
     transition: 1s;
-    font-weight: bold;
+    font-weight: 600;
     cursor: pointer;
 }
 
@@ -91,12 +93,16 @@ body {
 }
 
 #navBar {
-    position: absolute;
-    margin-left: 25vw;
-    top: 2.5vw;
+    position: sticky;
+    display: inline-block;
+    padding-left: 25vw;
+    top: 0;
+    width: 75%;
+    margin-top: 2.5vw;
     color: white;
-    width: 50vw;
     font-size: 1vw;
+    background-color: black;
+    z-index: 100;
 }
 
 li {
@@ -111,9 +117,10 @@ li {
 #navBar ul > li {
     text-align: left;
     display: inline-block;
-    width: 10vw;
+    width: 5vw;
     padding: 1vw;
     transition: 0.5s;
+    margin-right: 5vw;
 }
 
 #navBar ul > li:hover {
@@ -145,7 +152,7 @@ li {
 .pageName {
     color: white;
     position: absolute;
-    margin-top: -0.5vw;
+    margin-top: -4vw;
     margin-left: 2.5vw;
     font-size: 1.25vw;
 }
@@ -158,9 +165,13 @@ li {
     text-shadow: 0.25vw 0.25vw 0.1vw $yellow;
 }
 
+.pageNameBlue {
+    text-shadow: 0.25vw 0.25vw 0.1vw $blue;
+}
+
 .mainHeader {
     font-size: 4vw;
-    margin-top: -2vw;
+    margin-top: -5vw;
     margin-left: 25vw;
     width: 50vw;
     display: inline-block;
@@ -169,7 +180,7 @@ li {
 
 .colorCollumn {
     position: absolute;
-    margin-top: -1vw;
+    margin-top: -4vw;
     margin-left: 22.5vw;
     height: 9.5vw;
     width: 0.5vw;
@@ -180,11 +191,17 @@ li {
     box-shadow: 0.25vw 0.25vw 0.5vw $pink;
 }
 
+.blueCollumn {
+    background-color: $blue;
+    box-shadow: 0.25vw 0.25vw 0.5vw $blue;
+}
+
 #servicesLeftDiv {
     margin-top: -2vw;
     margin-left: 25vw;
     width: 20vw;
     font-size: 1.5vw;
+    font-weight: 500;
     position: absolute;
 }
 
@@ -193,12 +210,12 @@ li {
     margin-left: 55vw;
     width: 20vw;
     font-size: 1.5vw;
+    font-weight: 100;
     opacity: 0.75;
     position: absolute;
 }
 
 #aboutUsContainer {
-    position: absolute;
     margin-left: 15vw;
     margin-top: 15vw;
     width: 70vw;
@@ -219,6 +236,7 @@ li {
 
 .aboutUs {
     font-size: 1.25vw;
+    font-weight: 100;
     margin-left: 25vw;
     margin-bottom: 5vw;
     opacity: 0.75;
@@ -247,12 +265,12 @@ li {
 
 #skills {
     width: 35vw;
-    margin-left: 40vw;
+    margin-left: 45vw;
 }
 
 #languages {
     width: 50vw;
-    margin-left: 25vw;
+    margin-left: 22.5vw;
     margin-top: 3vw;
 }
 
@@ -260,14 +278,15 @@ li {
     font-size: 3vw;
     text-shadow: 0.25vw 0.25vw 0.5vw $yellow;
     margin-top: 7.5vw;
-    margin-left: 50vw;
-    font-weight: bold;
+    margin-left: 60vw;
+    font-weight: 700;
 }
 
 #educationDetails {
-    margin-left: 30vw;
+    margin-left: 46vw;
     font-size: 1.25vw;
     padding-bottom: 10vw;
+    width: 35vw;
 }
 
 #educationDetails pre {
@@ -284,8 +303,9 @@ li {
 }
 
 #projectsContainer {
-    margin-top: 35vh;
-    width: 100%;
+    margin-top: 15vw;
+    margin-left: 15vw;
+    width: 70vw;
     text-align: left;
 }
 
@@ -296,35 +316,39 @@ li {
     width: 100%;
     min-height: 100vh;
     transition: 0.5s;
-    border-bottom: solid 0.1vw white ;
 }
 
 .para {
     margin: 0;
+    margin-left: 5vw;
     line-height: 0.85em;
     display: block;
     position: sticky;
-    text-align: center;
+    text-align: left;
     top: 30vh;
     font-size: 20vw;
-    opacity: 0.25;
+    font-weight: 600;
+    opacity: 0.15;
     z-index: -1;
+    line-height: 0.72EM;
 }
 
 .portfolioIMG {
     width: 0;
     transition: 0.5s;
     display: block;
-    margin-left: auto;
-    margin-right: auto;
+    transform: translateY(2vw);
+    transform: translateX(-10%);
+    margin-left: 22.5%;
     cursor: pointer;
 }
 
 .portfolioItem {
     display: inline-block;
     font-size: 2vw;
-    margin: 0 0 0 5vw;
-    line-height: 0.9EM;
+    font-weight: 600;
+    margin: 0 0 0 10vw;
+    line-height: 1.35EM;
     transition: 0.5s;
     cursor: pointer;
 }
@@ -342,16 +366,8 @@ li {
 }
 
 #contactButton {
-    transition: 0.5s;
-    position: fixed;
-    margin: 0;
-    font-size: 1vw;
-    padding: 1vw;
-    right: 5vw;
-    top: 2.5vw;
-    display: inline-block;
-    cursor: pointer;
-    z-index: 100;
+    margin-left: 25vw;
+    text-align: right;
 }
 
 #contactButton:hover {
@@ -383,9 +399,11 @@ li {
 #contactUs {
     color: black;
     font-size: 2vw;
-    letter-spacing: 0.25vw;
+    font-weight: 400;
+    letter-spacing: 0.15vw;
     text-align: center;
-    margin-top: 15vh;
+    margin-top: 24vh;
+    margin-bottom: 0;
 }
 
 #email {
@@ -393,14 +411,15 @@ li {
     font-size: 4.5vw;
     text-align: center;
     margin: 0;
-    font-weight: bold;
-    margin-top: 10vh;
+    font-weight: 700;
+    margin-top: 0vh;
 }
 
 #social {
     text-align: center;
+    font-weight: 400;
     color: black;
-    font-size: 1.5vw;
+    font-size: 1vw;
     margin-top: 7.5vh;
 }
 
