--- a/src/style/stylesheet.css
+++ b/src/style/stylesheet.css
@@ -375,11 +375,11 @@ li {
   display: inline-block;
   margin-top: 17.5vh;
   margin-left: 16.5%;
-  width: 66%;
+  width: 66vw;
   background-color: white;
   height: 70vh;
   box-shadow: 1vw 1vw 0.5vw #09f7ff;
-  z-index: 100;
+  z-index: 120;
 }
 
 #close {
@@ -422,6 +422,126 @@ li {
   width: 5vh;
   margin: 1vw;
   cursor: pointer;
+}
+
+@media only screen and (max-width: 768px) {
+  #logo {
+    width: 50vw;
+    left: 0;
+    margin-left: 25vw;
+    margin-top: 5vw;
+    position: absolute;
+  }
+
+  #navBar {
+    padding-left: 0;
+    margin-left: 5vw;
+    margin-top: 25vw;
+    width: 95%;
+    font-size: 3vw;
+    position: relative;
+  }
+
+  #navBar ul li {
+    width: 15vw;
+    margin-right: 6.5vw;
+  }
+
+  #contactButton {
+    margin-left: 0vw;
+  }
+
+  #introContainer {
+    width: 100%;
+    margin-left: 0;
+    margin-top: 30vh;
+    z-index: 100;
+  }
+
+  .introText {
+    font-size: 15vw;
+    margin-left: 10vw;
+  }
+
+  #servicesContainer {
+    width: 95%;
+    margin-left: 5vw;
+  }
+
+  #servicesLeftDiv {
+    margin-left: 22.5vw;
+    margin-top: 2vw;
+    font-size: 4vw;
+    width: 60%;
+    display: block;
+    position: relative;
+  }
+
+  #servicesRightDiv {
+    width: 60%;
+    font-size: 4vw;
+    position: relative;
+    margin-left: 22.5vw;
+    margin-top: 10vw;
+  }
+
+  .pageName {
+    font-size: 3vw;
+  }
+
+  #aboutUsContainer {
+    width: 95%;
+    margin-left: 5vw;
+  }
+
+  .aboutUs {
+    font-size: 3.5vw;
+  }
+
+  #skills {
+    width: 45vw;
+  }
+
+  #languages {
+    width: 60vw;
+  }
+
+  #PK {
+    position: absolute;
+  }
+
+  #projectsContainer {
+    width: 95%;
+    margin-left: 5vw;
+  }
+
+  .portfolioItem {
+    margin-left: 25vw;
+    font-size: 4vw;
+  }
+
+  .portfolioIMG {
+    margin-left: 5vw;
+  }
+
+  .portfolioContainer {
+    overflow-x: hidden;
+  }
+
+  #education {
+    font-size: 4vw;
+  }
+
+  #educationDetails {
+    font-size: 2.5vw;
+    margin-left: 30vw;
+    width: 65vw;
+  }
+
+  #educationDetails pre {
+    font-size: 2vw;
+    margin-left: 2.5vw;
+  }
 }
 
 /*# sourceMappingURL=stylesheet.css.map */
